{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Touch",
            "id": "ca010e47-ba7a-4b39-a30e-a328f84e969c",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "0dd69148-13e5-44f6-8cde-c8094412bfe6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchDelta",
                    "type": "PassThrough",
                    "id": "a78eddd8-d0e1-45c0-a20d-9ebf2ce89a10",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "32fa8351-9a82-4fde-8b26-cfe23df3c1db",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "980cc4cf-071f-4221-94f5-e326df436da7",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}